--- a/Data_Generator/data_generator.ipynb
+++ b/Data_Generator/data_generator.ipynb
@@ -9,37 +9,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import annotations\n",
-    "from dataclasses import dataclass, asdict, replace\n",
-    "from typing import List, Dict, Optional\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import random, math, os, json\n",
-    "import matplotlib.pyplot as plt\n",
-    "import hashlib, time, platform, getpass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# =========================\n",
-    "# Load configuration from JSON\n",
-    "# =========================\n",
-    "CONFIG_PATH = \"taskgen_config.json\"  # path to your config file\n",
-    "\n",
-    "with open(CONFIG_PATH, \"r\", encoding=\"utf-8\") as f:\n",
-    "    CFG = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -1014,7 +983,7 @@
     "\n",
     "    # basic sanity checks\n",
     "    scenario_names = [cfg.name for cfg in SCENARIOS]\n",
-    "    sanity_check_root(DATASET_OUT_ROOT, scenario_names=scenario_names)\n"
+    "    sanity_check_root(DATASET_OUT_ROOT, scenario_names=scenario_names)"
    ]
   }
  ],
