--- a/Topology_Generator/topology_generator.ipynb
+++ b/Topology_Generator/topology_generator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -93,12 +93,10 @@
     "# ============================================================\n",
     "# Utility functions\n",
     "# ============================================================\n",
-    "\n",
     "def _fp(obj: dict) -> str:\n",
     "    \"\"\"Compute a short fingerprint for a dictionary.\"\"\"\n",
     "    s = json.dumps(obj, sort_keys=True).encode(\"utf-8\")\n",
     "    return hashlib.sha256(s).hexdigest()[:16]\n",
-    "\n",
     "\n",
     "def _save_json(obj: dict, path: str) -> str:\n",
     "    \"\"\"Save a dictionary as pretty-printed JSON.\"\"\"\n",
@@ -107,14 +105,12 @@
     "        json.dump(obj, f, ensure_ascii=False, indent=2)\n",
     "    return path\n",
     "\n",
-    "\n",
     "def _save_text(text: str, path: str) -> str:\n",
     "    \"\"\"Save plain text to a file.\"\"\"\n",
     "    os.makedirs(os.path.dirname(path), exist_ok=True)\n",
     "    with open(path, \"w\", encoding=\"utf-8\") as f:\n",
     "        f.write(text)\n",
     "    return path\n",
-    "\n",
     "\n",
     "def _save_matrix_csv(M: np.ndarray, path: str) -> str:\n",
     "    \"\"\"Save connection matrix as a CSV with MEC labels and a cloud column.\"\"\"\n",
@@ -133,7 +129,6 @@
     "# ============================================================\n",
     "# Data classes (TopologyHyper)\n",
     "# ============================================================\n",
-    "\n",
     "@dataclass\n",
     "class TopologyHyper:\n",
     "    \"\"\"\n",
@@ -165,7 +160,6 @@
     "# ============================================================\n",
     "# Reading MEC / Cloud data\n",
     "# ============================================================\n",
-    "\n",
     "def read_environment_files(mec_file: str, cloud_file: str):\n",
     "    \"\"\"\n",
     "    Read MEC and Cloud capacities from CSV files.\n",
@@ -173,7 +167,6 @@
     "      - MEC CSV: 'Private CPU Capacity', 'Public CPU Capacity'\n",
     "      - Cloud CSV: 'computational_capacity'\n",
     "    \"\"\"\n",
-    "    \n",
     "    \n",
     "    print(\"inside read_environment_files\")\n",
     "    mec_df = pd.read_csv(mec_file)\n",
@@ -191,7 +184,6 @@
     "# ============================================================\n",
     "# Build Connection Matrix\n",
     "# ============================================================\n",
-    "\n",
     "def _build_connection_matrix(h: TopologyHyper, K: int) -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Build connection matrix of shape (K, K+1):\n",
@@ -269,7 +261,6 @@
     "                    M[i, j] = max(M[i, j], weak)\n",
     "                    if h.symmetric:\n",
     "                        M[j, i] = max(M[j, i], weak)\n",
-    "\n",
     "    else:\n",
     "        # Unknown topology_type → no horizontal links\n",
     "        pass\n",
@@ -290,7 +281,6 @@
     "# ============================================================\n",
     "# Graph drawing\n",
     "# ============================================================\n",
-    "\n",
     "def _draw_graph_png(M: np.ndarray,\n",
     "                    out_png: str,\n",
     "                    title: str = \"MEC Graph (MB/slot)\",\n",
@@ -352,7 +342,6 @@
     "# ============================================================\n",
     "# Markdown Report Writer\n",
     "# ============================================================\n",
-    "\n",
     "def _write_markdown_report(topo: dict, meta: dict, graph_png: Optional[str], out_md: str):\n",
     "    \"\"\"Write a simple Markdown report summarizing the topology.\"\"\"\n",
     "    K = topo[\"number_of_servers\"]\n",
@@ -399,7 +388,6 @@
     "# ============================================================\n",
     "# Main builder\n",
     "# ============================================================\n",
-    "\n",
     "def build_topology(\n",
     "    h: TopologyHyper,\n",
     "    mec_csv_path: str,\n",
@@ -479,7 +467,6 @@
     "# ============================================================\n",
     "# Build multiple variants\n",
     "# ============================================================\n",
-    "\n",
     "def build_three_topologies_variants(\n",
     "    mec_csv_path: str,\n",
     "    cloud_csv_path: str,\n",
@@ -533,7 +520,6 @@
     "# ============================================================\n",
     "# Example entrypoint (optional)\n",
     "# ============================================================\n",
-    "\n",
     "if __name__ == \"__main__\":\n",
     "    print(\"hi\")\n",
     "    # Example usage (you can adjust paths and parameters as needed)\n",
@@ -556,7 +542,7 @@
     "        bw_mec_cloud=bw_mc,\n",
     "        out_root=\"./topologies\"\n",
     "    )\n",
-    "    print(json.dumps(out_dirs, indent=2))\n"
+    "    print(json.dumps(out_dirs, indent=2))"
    ]
   }
  ],
